# RustStudy

./: Cargo.toml
ezytutors/: .env  Cargo.toml
ezytutors/src/iter2/: handlers.rs
ezytutors/tutor-db/: Cargo.toml
ezytutors/tutor-db/src/: database.sql
ezytutors/tutor-nodb/: Cargo.toml
ezytutors/tutor-nodb/src/: handlers.rs  routes.rs
http/src/: httprequest.rs  httpresponse.rs  lib.rs
httpserver/data/: orders.json
httpserver/public/: 404.html  health.html  index.html  style.css
httpserver/src/: handler.rs  router.rs  server.rs
tcpclient/src/: main.rs
tcpserver/src/: main.rs
