[package]
name = "ezytutors"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
actix-rt = "2"
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "postgres", "chrono"] }
chrono = { version = "0.4.41", features = ["serde"] }
serde = { version = "1.0.219", features = ["derive"] }
dotenv = "0.15.0"
tokio = { version = "1.45.1", features = ["full"] }

[workspace]
members = ["tutor-nodb", "tutor-db"]
